Fix z-index for primary section

--- a/docroot/themes/custom/shops/style/scss/components/_header.scss
+++ b/docroot/themes/custom/shops/style/scss/components/_header.scss
@@ -3,7 +3,7 @@
 
   &-adv,
   &-primary {
-    z-index: 500;
+    z-index: 505;
 
     @extend .position-relative;
     @extend .bg-white;
